# Athena

./: .gitattributes  .gitignore  LICENSE  README.md  athena.sharpmake.cs  imgui.ini  meson.build  runme.bat  setup.bat  vendor.yml
Athena/: Athena.vcxproj  Athena.vcxproj.filters  array.h  (+27 more)
Code/Core/: meson.build
Code/Core/Engine/: asset_server.cpp  asset_server.h  asset_streaming.cpp  asset_streaming.h  constants.h  job_system.cpp  job_system.h  main.cpp  material_manager.cpp  material_manager.h  memory.cpp  memory.h  scene.cpp  scene.h
Code/Core/Engine/Lib/Debug/: assimp-vc143-mtd.lib
Code/Core/Engine/Render/: blit.cpp  blit.h  blue_noise.cpp  blue_noise.h  ddgi.cpp  ddgi.h  depth_of_field.cpp  depth_of_field.h  frame_time.h  gbuffer.cpp  gbuffer.h  graphics.cpp  graphics.h  lighting.cpp  lighting.h  misc.cpp  misc.h  post_processing.cpp  post_processing.h  render_graph.cpp  render_graph.h  renderer.cpp  renderer.h  taa.cpp  taa.h  unified_geometry_buffer.cpp  visibility_buffer.cpp  visibility_buffer.h
Code/Core/Engine/Resources/: athena.rc
Code/Core/Engine/Shaders/: interlop.hlsli  root_signature.hlsli
Code/Core/Engine/Shaders/Compute/: probe_blending.csh
Code/Core/Engine/Shaders/DDGI/: ddgi.csh  probe_trace.rtsh
Code/Core/Engine/Shaders/Debug/: debug_draw.csh  debug_draw.psh  debug_draw.vsh  debug_layer.csh  visualizers.csh
Code/Core/Engine/Shaders/GBuffer/: gbuffer.csh
Code/Core/Engine/Shaders/Include/: clear_common.hlsli  ddgi_common.hlsli  debug_common.hlsli  debug_draw.hlsli  dof.hlsli  gbuffer_common.hlsli  lighting_common.hlsli  math.hlsli  rt_common.hlsli  rt_tlas_common.hlsli  spherical_harmonics.hlsli  standard_brdf_common.hlsli  stochastic.hlsli  vertex_common.hlsli
Code/Core/Engine/Shaders/Lighting/: gi.csh  standard_brdf.csh  standard_brdf.rtsh
Code/Core/Engine/Shaders/Materials/: basic_normal_gloss.csh  basic_normal_gloss.psh
Code/Core/Engine/Shaders/Misc/: clear.csh  frame_init.csh  fullscreen.psh  rt_tlas.csh  texture_copy.csh
Code/Core/Engine/Shaders/Pixel/: fullscreen.psh
Code/Core/Engine/Shaders/PostProcessing/: depth_of_field.csh  dof.csh  taa.csh  tonemapping.psh
Code/Core/Engine/Shaders/RayTracing/: probe_trace_rt.hlsl  standard_brdf.rtsh
Code/Core/Engine/Shaders/Sampling/: downsampling.csh
Code/Core/Engine/Shaders/Vertex/: basic.vsh  fullscreen.vsh
Code/Core/Engine/Shaders/VisibilityBuffer/: visibility_buffer.psh
Code/Core/Engine/Streaming/: model_streaming.h
Code/Core/Foundation/: AthenaFoundation.natvis  assert.cpp  assets.cpp  assets.h  bit_allocator.cpp  bit_allocator.h  colors.h  context.cpp  context.h  filesystem.cpp  filesystem.h  hash.cpp  hash.h  math.h  memory.cpp  memory.h  pool_allocator.h  profiling.cpp  profiling.h  signpost.cpp  signpost.h  sort.cpp  sort.h  threading.cpp  threading.h  tlsf_allocator.cpp  tlsf_allocator.h  types.h
Code/Core/Foundation/Containers/: array.h  error_or.h  hash_table.h  iterator.h  option.h  push_buffer.cpp  push_buffer.h  ring_buffer.cpp  ring_buffer.h
Code/Core/Foundation/Gpu/: gpu.h
Code/Core/Foundation/Math/: math.h
Code/Core/Foundation/Networking/: packets.h  socket.cpp  socket.h
Code/Core/Scripts/: compile_shader.py  generate_shader_table.py  reload_shader.py
Code/Core/Tools/AssetBuilder/: main.cpp  material_importer.cpp  material_importer.h  meson.build  model_builder.cpp  model_builder.h  model_importer.cpp  model_importer.h  texture_importer.cpp  texture_importer.h
Code/Core/Tools/AssetBuilder/Lib/Debug/: assimp-vc143-mtd.exp
Code/Core/Tools/AssetBuilder/Lib/Release/: DirectXMesh.lib  DirectXTex.lib  DirectXTex_Spectre.lib  assimp-vc143-mt.lib
Code/Core/Tools/AssetServer/: main.cpp
Code/Core/Tools/Lib/Qt6/: Qt6BundledLibjpeg.lib  Qt6BundledLibpng.lib  Qt6Concurrent.lib  Qt6Concurrent.prl  Qt6Concurrentd.prl  Qt6Core.lib  Qt6Core.prl  Qt6Cored.prl  Qt6DBus.lib  Qt6DBus.prl  Qt6DBusd.prl  Qt6DeviceDiscoverySupport.lib  Qt6DeviceDiscoverySupport.prl  Qt6DeviceDiscoverySupportd.prl  Qt6EntryPoint.lib  Qt6EntryPoint.prl  Qt6EntryPointd.prl  Qt6ExampleIcons.lib  Qt6ExampleIcons.prl  Qt6ExampleIconsd.prl  Qt6ExamplesAssetDownloader.prl  Qt6ExamplesAssetDownloaderd.prl  Qt6FbSupport.lib  Qt6FbSupport.prl  Qt6FbSupportd.prl  Qt6Gui.lib  Qt6Gui.prl  Qt6Guid.prl  Qt6Network.lib  Qt6Network.prl  Qt6Networkd.prl  Qt6OpenGL.prl  Qt6OpenGLWidgets.lib  Qt6OpenGLWidgets.prl  Qt6OpenGLWidgetsd.prl  Qt6OpenGLd.prl  Qt6PrintSupport.lib  Qt6PrintSupport.prl  Qt6PrintSupportd.prl  Qt6Sql.lib  (+11 more)
Code/Core/Tools/MaterialGraphEditor/: main.cpp
Code/Core/Tools/UsdBuilder/: main.cpp
Code/Core/Tools/UsdBuilder/Lib/Debug/: MaterialXGenMdl.lib  MaterialXGenOsl.lib  MaterialXGenShader.lib  MaterialXRender.lib  MaterialXRenderGlsl.lib  MaterialXRenderHw.lib  osdGPU.lib  usd_ar.lib  usd_arch.lib  usd_garch.lib  usd_gf.lib  usd_glf.lib  usd_hd.lib  usd_hdGp.lib  usd_hdMtlx.lib  usd_hdar.lib  usd_hdsi.lib  usd_hdx.lib  usd_hf.lib  usd_hgiGL.lib  usd_hgiInterop.lib  usd_js.lib  usd_kind.lib  usd_ndr.lib  usd_pcp.lib  usd_plug.lib  usd_pxOsd.lib  usd_sdf.lib  usd_ts.lib  usd_usd.lib  usd_usdBakeMtlx.lib  usd_usdGeom.lib  usd_usdHydra.lib  usd_usdImaging.lib  usd_usdImagingGL.lib  usd_usdLux.lib  usd_usdMedia.lib  usd_usdProc.lib  usd_usdSkel.lib  usd_usdUtils.lib  (+3 more)
Code/Core/Tools/UsdBuilder/Lib/Release/: MaterialXCore.lib  MaterialXFormat.lib  MaterialXGenGlsl.lib  MaterialXGenMsl.lib  MaterialXRenderGlsl.lib  MaterialXRenderOsl.lib  osdCPU.lib  osdGPU.lib  usd_cameraUtil.lib  usd_garch.lib  usd_geomUtil.lib  usd_hdSt.lib  usd_hgi.lib  usd_hio.lib  usd_pegtl.lib  usd_sdr.lib  usd_tf.lib  usd_trace.lib  usd_usdAppUtils.lib  usd_usdMtlx.lib  usd_usdPhysics.lib  usd_usdProcImaging.lib  usd_usdRender.lib  usd_usdRi.lib  usd_usdRiPxrImaging.lib  usd_usdSemantics.lib  usd_usdShade.lib  usd_usdSkelImaging.lib  usd_usdUI.lib  usd_usdVol.lib  usd_usdVolImaging.lib  zlibstatic.lib
Code/Core/Tools/UsdBuilder/Lib/TinyUsd/Debug/: tinyusdz_static.lib
Code/Core/Tools/UsdBuilder/Lib/TinyUsd/Release/: tinyusdz_static.lib
Code/Core/Tools/UsdBuilder/Lib/usd/usd/resources/: plugInfo.json
(+42 files in other folders)
